--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,12 @@
     },
     "minimum-stability": "stable",
     "require": {
+        "kartik-v/yii2-builder": "@dev",
         "kartik-v/yii2-detail-view": "*",
         "kartik-v/yii2-editable": "@dev",
         "kartik-v/yii2-grid": "@dev",
+        "kartik-v/yii2-number": "dev-master",
         "kartik-v/yii2-widgets": "*",
-        "kartik-v/yii2-builder": "@dev",
         "php": ">=5.6.0",
         "phpoffice/phpspreadsheet": "^1.19",
         "yii2mod/yii2-rbac": "*",
