--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,14 @@
     #RewriteCond %{SERVER_PORT} 80
     #RewriteRule (.*) https://%{SERVER_NAME}/$1 [R,L]
 
+    RewriteCond %{REQUEST_URI} ^/(api)
+    RewriteRule ^api/assets/(.*)$ api/web/assets/$1 [L]
+    RewriteRule ^api/public/css/(.*)$ api/web/public/css/$1 [L]
+
+    RewriteCond %{REQUEST_URI} !^/api/web/(assets|public)/
+    RewriteCond %{REQUEST_URI} ^/(api)
+    RewriteRule ^.*$ api/web/index.php [L]
+
     # deal with backend first
     RewriteCond %{REQUEST_URI} ^/(backend)
     RewriteRule ^backend/assets/(.*)$ backend/web/assets/$1 [L]
@@ -22,7 +30,7 @@
     RewriteRule ^assets/(.*)$ frontend/web/assets/$1 [L]
     RewriteRule ^public/css/(.*)$ frontend/web/public/css/$1 [L]
 
-    RewriteCond %{REQUEST_URI} !^/(frontend|backend)/web/(assets|public)/
+    RewriteCond %{REQUEST_URI} !^/(frontend|backend|api)/web/(assets|public)/
     RewriteCond %{REQUEST_URI} !index.php
     RewriteCond %{REQUEST_FILENAME} !-f [OR]
     RewriteCond %{REQUEST_FILENAME} !-d
