--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "yiisoft/yii2-jui": "~2.0.0",
         "yiisoft/yii2-redis": "^2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "yiisoft/yii2": "~2.0.14"
+        "yiisoft/yii2": "~2.0.10"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -49,6 +49,9 @@
         "process-timeout": 1800,
         "fxp-asset": {
             "enabled": false
+        },
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
         }
     },
     "repositories": [
