--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require": {
         "kartik-v/yii2-builder": "@dev",
         "kartik-v/yii2-detail-view": "*",
+        "kartik-v/yii2-dropdown-x": "*",
         "kartik-v/yii2-editable": "@dev",
         "kartik-v/yii2-export": "@dev",
         "kartik-v/yii2-grid": "@dev",
